[package]
name = "anyhow"
version = "1.0.75"                                                      # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]                          # 作者邮箱
categories = ["rust-patterns", "no-std"]                                # 再crates.io上所属的分类
description = "Flexible concrete Error type built on std::error::Error" # 描述
documentation = "https://docs.rs/anyhow"                                # 文档地址
edition = "2018"                                                        # Rust版本
keywords = ["error", "error-handling"]                                  # 在crates.io上搜索关键字
license = "MIT OR Apache-2.0"                                           # 开源协议
repository = "https://github.com/dtolnay/anyhow"                        # 仓库地址
rust-version = "1.39"                                                   # Rust版本号

# 声明的特性
[features]
default = ["std"]
std = []

# 程序依赖
[dependencies]
backtrace = { version = "0.3.51", optional = true }

# 测试和示例的依赖
[dev-dependencies]
futures = { version = "0.3", default-features = false }
rustversion = "1.0.6"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0.45"
trybuild = { version = "1.0.66", features = ["diff"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]
